<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/normal_padding"
    android:paddingEnd="@dimen/normal_padding"
    android:paddingStart="@dimen/normal_padding"
    android:paddingTop="@dimen/normal_padding"
    tools:context="pl.baftek.enigma.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_text"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColor="@android:color/holo_orange_dark"/>

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:text="X"
            android:onClick="clearEditText"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_number"
        android:inputType="number"
        android:text="4"
        android:textAlignment="viewStart"
        android:textColor="@android:color/holo_orange_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_encode"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="?android:attr/colorPrimary"
            android:onClick="encode"
            android:text="@string/encode"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_decode"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="?android:attr/colorPrimaryDark"
            android:onClick="decode"
            android:text="@string/decode"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="wynik wyświetli się tutaj :D"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/copyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:onClick="copyToClipboard"
            app:srcCompat="@mipmap/ic_copy"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/creator"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/info1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creators"
            android:textAlignment="center"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>
